<b>2009-02-22</b>

* "Analyze" now includes count of countries, avg length, duration
* php/stats.php partly JSON-ified
* "Trip" filter prominence reduced
* Clearer "Help" icons
* "X" icon now OpenFlights Purple(tm)

<b>2009-02-09</b>

* Facebook app now includes a map of flights
* Bug: Facebook updates show airports in correct order

<b>2009-02-06</b>

* GAD replaced with OurAirports
* Over 1000 new airports imported from OurAirports
* Added DB index to IATA column for faster searching
* Require at least four digits of precision for new airports

<b>2009-02-05</b>

* Cleaner appearance for statsbox, AJAX icon when loading
* Login form only shown after loading complete
* Bug: "Analyze" works again on IE7
* Bug: Popups work again on IE7 (bug in Prototype?)
* Bug: Syntax error fixed, importing works again

<b>2009-02-04</b>

* Airport/airline databases released
* Airport/airline search now usable without logging in
* Bug: Duplicated airlines when importing

<b>2009-02-01</b>

* Departure time and arrival time now supported
* Timezones and daylight savings time (DST) added to airport database/search
* Distance, duration, date, departure time, arrival time kept synced to each other
* Distance, duration validated before saving
* FlightMemory import now supports arrival times
* CSV format imports and exports departure times
* CSV spec updated to 0.4 (optional departure time added)
* Bug: Can now export the flights of a single airport

<b>2009-01-23</b>

* Airline always shown (if possible) in "List flights" view
* Airline autocompleted from flight number only if it looks like IATA/ICAO code
* Bug: Popup toolbar manipulation no longer attempted unless logged in

<b>2009-01-22</b>

* Upgraded to OpenLayers 2.7
* Enabled mod_deflate in Apache
* Future flights shown with dotted lines and ghosted airports
* Future flights in italics in flight listings

<b>2009-01-21</b>

* Facebook application released
* Facebook link status visible in Settings