@@ -12,7 +12,7 @@
     <script type="text/javascript" src="/js/scw.js"></script>
     <script type="text/javascript" src="/js/prototype.js?version=20090205"></script>
     <script type="text/javascript" src="/js/scriptaculous.js"></script>
-    <script type="text/javascript" src="/openflights.js?version=20090222"></script>
+    <script type="text/javascript" src="/openflights.js?version=20090223"></script>
   </head>
 
   <body>
@@ -33,7 +33,7 @@
 
 	    <div id="news" style="display: none">
 	      <img src="/img/close.gif" height=17 width=17 onClick='JavaScript:closeNews()'> 
-	      <B>News</b>: 22 Feb 2009: <a href="/about.html#CHANGES">"Analyze" now includes count of countries plus average flight length and duration.</a>
+	      <B>News</b>: 23 Feb 2009: <a href="/blog/">New: Export KML and view your flights in Google Earth!  Details in blog.</a>
 	    </div>
 	    
 	    <div id="ajaxloader">
